--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clogger",
+  "name": "bland",
   "version": "0.0.1",
   "description": "Console logger for node, saving you customising just to use console.debug",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/domudall/clogger.git"
+    "url": "git://github.com/domudall/bland.git"
   },
   "keywords": [
     "logger",
@@ -18,8 +18,8 @@
   "author": "Dom Udall",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/domudall/clogger/issues"
+    "url": "https://github.com/domudall/bland/issues"
   },
-  "homepage": "https://github.com/domudall/clogger"
+  "homepage": "https://github.com/domudall/bland"
 }
 
